[package]
name = "ustack"
description = "self-hosted markdown blogging platform"
version = "0.8.0"
edition = "2021"
authors = ["Evan Perry Grove <epgrove@maskedfort.com>"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.18.0"
dioxus-ssr = "0.4.0"
dioxus = "0.4.0"
clap = { version = "4.3.4", features = ["cargo", "derive"] }
log = "0.4"
simple_logger = { version = "4.2.0", features = ["timestamps"] }
dunce = "1.0.4"
hyper = { version = "0.14.27", features = ["full"]  }
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
itertools = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
chrono = "0.4.26"
html-escape = "0.2.13"
rss = { version = "2.0.6", features = ["atom", "builders"] }
quick-xml = "0.31.0"
